--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -74,6 +74,7 @@
       .then(response => response.json())
       .then(data => {
           console.log("Data received:", data);
+          alert("Value of yourparty:"+yourparty);
 
           if (!Array.isArray(data) || data.length < 2) {
               console.error("Invalid or incomplete data:", data);
