--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -93,16 +93,12 @@
 
 
         <label for="elections">Type of Election:</label>
-        <select name="elections" id="elections">
-          <option value="westminster">Westminster</option>
-          <option value="county">County</option>
-          <option value="borough">Borough</option>
-          <option value="parish">Parish</option>
-        </select><br>
+        <select name="elections" id="elections"></select><br>
         <label for="yourparty">Your Party:</label>
-        <select id="yourparty"></select><br>
-        Walk Size: <input type="number" min="100" step="1" name="walksize" id="walksize" onchange="updateConstantIfChanged('walksize', walksize.value);"/><br>
-        <br>
+        <select name="yourparty" id="yourparty"></select><br>
+        <label for="walksize">Walk Size:</label>
+        <input type="number" min="100" max=500 step="1" name="walksize" id="walksize" /><br>
+
         <label for="GOTV">GOTV:</label>
         <input
           type="number"
@@ -113,6 +109,8 @@
           step="0.01"
           value="0.5"
         />
+        <label for="yourparty">Your Party:</label>
+        <select id="yourparty"></select><br>
         
 
 
