--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -99,10 +99,10 @@
       <select name="yourparty" id="yourparty"></select><br>
 
       <label for="walksize">Walk Size:</label>
-      <input type="number" min="100" max="500" step="50" name="walksize" id="walksize" oninput="updateMessages()"/><br>
+      <input type="number" min="100" max="500" step="50" name="walksize" id="walksize" /><br>
 
       <label for="GOTV">GOTV:</label>
-      <input type="number" id="GOTV" name="GOTV" min="0.01" max="0.99" step="0.01" oninput="updateMessages()" />
+      <input type="number" id="GOTV" name="GOTV" min="0.01" max="0.99" step="0.01"  />
       <br>
 
       Firstname: <input type="text" name="candfirst" placeholder=" {{ context.formdata['candfirst'] }} "/><br>
