--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -84,7 +84,7 @@
 <div id="nav" class="innertube">
 
         <h1>Map Data </h1>
-        {% for x,y in context.formdata.items() %}
+        {% for x,y in formdata.items() %}
         		<ul> {{ x }} : {{ y }} </ul>
         {% endfor %}
 
