--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -84,7 +84,7 @@
 <div id="nav" class="innertube">
 
         <h1>Map Data </h1>
-        {% for x,y in formdata.items() %}
+        {% for x, y in (formdata or {}).items() %}
         		<ul> {{ x }} : {{ y }} </ul>
         {% endfor %}
 
@@ -105,16 +105,16 @@
       <input type="number" id="GOTV" name="GOTV" min="0.01" max="0.99" step="0.01"  />
       <br>
 
-      Firstname: <input type="text" name="candfirst" placeholder=" {{ context.formdata['candfirst'] }} "/><br>
-      Surname: <input type="text" name="candsurn" placeholder=" {{ context.formdata['candsurn'] }} "/><br>
-      Date of election: <input type="text" name="electiondate" placeholder=" {{ context.formdata['electiondate'] }} "/><br>
+      Firstname: <input type="text" name="candfirst" placeholder=" {{ formdata['candfirst'] }} "/><br>
+      Surname: <input type="text" name="candsurn" placeholder=" {{ formdata['candsurn'] }} "/><br>
+      Date of election: <input type="text" name="electiondate" placeholder=" {{ formdata['electiondate'] }} "/><br>
 
 
 
 
 				<form id="normal-file" method="POST" enctype="multipart/form-data">
             CONTROLS:<br>
-          <input type="file" name="importfile" placeholder= " {{ context.formdata['importfile']}} "/>
+          <input type="file" name="importfile" placeholder= " {{ formdata['importfile']}} "/>
 		      <input type="submit" value="Normalise" class="btn btn-norm" onclick="setActionForm('normalise')"/>
 		      <input type="submit" value="ProduceWalks" class="btn btn-norm" onclick="setActionForm('produce')"/>
 					<input type="submit" value="ProduceCanvasCards" class="btn btn-norm" onclick="setActionForm('canvass')"/>
@@ -159,7 +159,7 @@
 </script>
 </div>
 {% endblock nav %}
-  {% block captains %}
-  {% endblock captains %}
-  {% block candidates %}
-  {% endblock candidates %}
+{% block captains %}
+{% endblock captains %}
+{% block candidates %}
+{% endblock candidates %}
