--- a/templates/candidates.html
+++ b/templates/candidates.html
@@ -4,7 +4,7 @@
 <div id="datawin" class="innertube">
 
 	    <table id="candidates-table">
-				<thead>
+				<thead id="candidates-table">
 	      <tr>
 				<th class="c1" >?</th>
 	      <th class="c1" >CC</th>
@@ -14,8 +14,8 @@
 
 	    </tr>
 	      </thead>
-				<tbody style="height: 70px">
-	
+				<tbody style="height: 70px" id="candidates-table">
+
 			</tbody>
 	    </table>
 
