--- a/templates/candidates.html
+++ b/templates/candidates.html
@@ -1,9 +1,5 @@
 {% extends "Dash0.html" %}
-
-{% block data %}
-<div id="datawin" class="innertube">
-
-	    <table id="candidates-table">
+{% block captains %}
 				<thead>
 	      <tr>
 				<th class="c1" >?</th>
@@ -17,7 +13,4 @@
 				<tbody style="height: 70px">
 
 			</tbody>
-	    </table>
-
-</div>
-{% endblock data %}
+{% endblock captains %}
