--- a/templates/captains.html
+++ b/templates/captains.html
@@ -1,10 +1,5 @@
 {% extends "Dash0.html" %}
-
-{% block data %}
-
-<div id="datawin" class="innertube">
-
-	    <table id="captains-table">
+{% block captains %}
 				<thead>
 	      <tr>
 				<th class="c1" >?</th>
@@ -33,9 +28,4 @@
 	      </tr>
 	      {% endfor %}
 			</tbody>
-	    </table>
-
-</div>
-
-
-{% endblock data %}
+{% endblock captains %}
