--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -152,7 +152,7 @@
 {% block captains %}
 
 <div id="tabletitle" >
-<h1>Details for : {{ (formdata or {}).get('importfile', '')}} </h1>
+<h1>Details for : {{ (formdata or {}).get('tabledetails', '')}} </h1>
 </div>
 
 <div id="datawin" class="innertube">
