--- a/static/style.css
+++ b/static/style.css
@@ -58,6 +58,8 @@ width: 1200px;
 background: white;
 left: 0;
 bottom: 230px;
+font-weight: bold;
+font-size: 1.5em;
 }
 
 #datawin {
@@ -92,12 +94,12 @@ bottom: 230px;
 		}
     #logwin {
 			width: 100%;
-			    height: 200px;  /* Adjust height as needed */
-			    background: #111;
-			    color: #0f0; /* Green text for a terminal look */
-			    padding: 10px;
-			    font-family: monospace;
-			    border: 1px solid #444;
+	    height: 200px;  /* Adjust height as needed */
+	    background: #111;
+	    color: #0f0; /* Green text for a terminal look */
+	    padding: 10px;
+	    font-family: monospace;
+	    border: 1px solid #444;
 			overflow-y: auto;
 			display: flex;
 			flex-direction: column;
