--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -102,6 +102,9 @@
       <label for="GOTV">GOTV:</label>
       <input type="number" id="GOTV" name="GOTV" min="0.01" max="0.99" step="0.01"  />
       <br>
+      <label for="autofix">AutoFix:</label>
+      <input type="checkbox" id="autofix" name="autofix"   />
+      <br>
 
       Firstname: <input type="text" name="candfirst" placeholder=" {{ (formdata or {}).get('candfirst', '') }} "/><br>
       Surname: <input type="text" name="candsurn" placeholder=" {{ (formdata or {}).get('candsurn', '') }} "/><br>
