--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -103,8 +103,7 @@
       <input type="number" id="GOTV" name="GOTV" min="0.01" max="0.99" step="0.01"  />
       <br>
       <label for="autofix">AutoFix:</label>
-      <input type="hidden" id="autofix" name="autofix" value=0  />
-      <input type="checkbox" id="autofix" name="autofix" value=1  />
+      <input type="number" min="1" max="3" step="1" id="autofix" name="autofix" placeholder=0  />
       <br>
 
 
